LLMs_novel_chain_generation by Openai, Gemini

--- a/Week_7/PJ_LangChain_with_PromptText/2)_LLMs_novel_chain_generation_OPENAI(Week_7).ipynb
+++ b/Week_7/PJ_LangChain_with_PromptText/2)_LLMs_novel_chain_generation_OPENAI(Week_7).ipynb
@@ -150,7 +150,7 @@
         "import os\n",
         "\n",
         "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()\n",
-        "# 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"
+        "# OPENAI - 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"
       ],
       "metadata": {
         "id": "qxZXQzINCebv",
